# server.js
@@ -1,17 +1,66 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
+const dotenv = require('dotenv').config()
+const session = require('express-session');
+const passport = require('passport');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
+
 const port = process.env.PORT || 3000;
 const app = express();
 
-app.use(bodyParser.json())
-app.use((req, res, next) => {
-    res.setHeader('Access-Control-Allow-Origin', '*');
-    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
-    next();
+app
+    .use(bodyParser.json())
+    .use(session({
+        secret: "secret",
+        resave: false,
+        saveUninitialized: true,
+        cookie: { secure: true }
+    }))
+    .use(passport.initialize())
+
+    .use(passport.session())
+
+    .use((req, res, next) => {
+        res.setHeader('Access-Control-Allow-Origin', '*');
+        res.setHeader('Access-Control-Allow-Methods', 
+            'POST, GET, PUT, PATCH, DELETE, OPTIONS'
+        );
+        next();
+    })
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
+    .use(cors({ origin: '*' }))
+    .use("/", require("./routes/index.js"));
+
+
+
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+    }
+));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
 });
 
-app.use('/', require('./routes'));
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session:false}),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    });
 
 mongodb.initDb((err) => {
     if(err) {
